@@ -1,3 +1,10 @@
+2008-01-07  muppet <scott@asofyet.org>
+
+	* GObject.xs:  Load GInterface types immediately, instead of
+	leaving them for lazy loading.  Otherwise, it is possible to
+	get into situations in which a GInterface has not triggered
+	its lazy loading by the time it is needed.
+
 2008-01-07  Torsten Schoenfeld  <kaffeetisch@gmx.de>
 
 	* CodeGen.pm
